--- a/src/main/resources/templates/publisher/publisher-profile.html
+++ b/src/main/resources/templates/publisher/publisher-profile.html
@@ -12,14 +12,21 @@
       </div>
     </div>
     <div class="col-sm-12">
-      <input type="text" readonly th:value="${publisher?.name}">
+      <h2 th:text="${publisher?.name}"></h2>
     </div>
     <div class="col-sm-12">
-      <th:block th:each="book : ${publisher?.books}">
-        <div class="alert alert-primary">
-          <a th:href="@{/books/${book.id}}" th:text="${book.name}"></a>
+      <div class="card">
+        <div class="card-header">
+          Yazarın Kitapları
         </div>
-      </th:block>
+        <div class="card-body">
+          <th:block th:each="book : ${publisher?.books}">
+            <div class="alert alert-primary">
+              <a class="btn btn-link" th:href="@{/books/} + ${book.id}" target="_blank" th:text="${book.name}"></a>
+            </div>
+          </th:block>
+        </div>
+      </div>
     </div>
   </div>
 </div>
