--- a/src/main/resources/templates/writer/writer-profile.html
+++ b/src/main/resources/templates/writer/writer-profile.html
@@ -14,8 +14,12 @@
         <div class="card-header">
           Yazarın Kitapları
         </div>
-        <div class="card-body" th:each="book : ${writer?.books}">
-            <a class="btn btn-link" th:href="@{/books/} + ${book.id}" target="_blank"  th:text="${book.name}"></a>
+        <div class="card-body">
+          <th:block th:each="book : ${writer?.books}">
+             <div class="alert alert-primary">
+              <a class="btn btn-link" th:href="@{/books/} + ${book.id}" target="_blank" th:text="${book.name}"></a>
+            </div>
+          </th:block>
         </div>
       </div>
     </div>
