--- a/src/main/resources/templates/book/detail.html
+++ b/src/main/resources/templates/book/detail.html
@@ -44,15 +44,15 @@
         <div class="col">
             <div class="form-group">
                 <label for="cover">Kapak Tipi</label>
-                <input class="form-control" type="text" id="cover" readonly
-                    placeholder="Kapak Tipi" th:value="${book?.coverFormat.name}" />
+                <input class="form-control" type="text" id="cover" readonly placeholder="Kapak Tipi"
+                    th:value="${book?.coverFormat.name}" />
             </div>
         </div>
         <div class="col">
             <div class="form-group">
                 <label for="lang">Kitap Dili</label>
-                <input class="form-control" type="text" id="lang" readonly
-                    placeholder="Kitap Dili" th:value="${book?.language}" />
+                <input class="form-control" type="text" id="lang" readonly placeholder="Kitap Dili"
+                    th:value="${book?.language}" />
             </div>
         </div>
         <div class="col-sm-12">
@@ -60,8 +60,8 @@
                 <label th:for="publisherInput">Yayıncı Bilgileri</label>
                 <div class="card">
                     <div class="card-body inline">
-                        <input class="form-control" type="text" id="publisherInput" readonly
-                            placeholder="Yayıcı ismi" th:value="${book.publisher.name}" />
+                        <input class="form-control" type="text" id="publisherInput" readonly placeholder="Yayıcı ismi"
+                            th:value="${book.publisher.name}" />
                     </div>
                 </div>
             </div>
@@ -88,11 +88,12 @@
                     th:value="${book?.bookAddress}" />
             </div>
         </div>
-        <th:block th:unless="${book?.borrowed}">
-            <div class="col-sm-12 button-group">
-                <hr>
-                <a class="btn btn-secondary" th:href="@{/borrowings/create?bookId=} + ${book?.id}">Ödünç Al</a>
-            </div>
-        </th:block>
+        <div class="col-sm-12 button-group">
+            <hr>
+            <a class="btn btn-secondary" th:unless="${book?.borrowed}"
+                th:href="@{/borrowings/create?bookId=} + ${book?.id}">Ödünç Al</a>
+            <a class="btn btn-primary" 
+                th:href="@{/books/edit/} + ${book.id}">Düzenle</a>
+        </div>
     </div>
 </div>
