--- a/src/main/resources/templates/boilerplate.html
+++ b/src/main/resources/templates/boilerplate.html
@@ -21,23 +21,62 @@
 
         <!-- Sidebar -->
         <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading">Kütüphane YBS</div>
+            <div class="sidebar-heading"><a href="/" class="navbar-brand">Kütüphane YBS</a></div>
             <div class="list-group list-group-flush">
                 <a href="/" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-                <a href="/users" class="list-group-item list-group-item-action bg-light">Kullanıcılar</a>
-                <a href="/members" class="list-group-item list-group-item-action bg-light">Üyeler</a>
-                <a href="/writers" class="list-group-item list-group-item-action bg-light">Yazarlar</a>
-                <a href="/publishers" class="list-group-item list-group-item-action bg-light">Yayıncı Firmalar</a>
-
-                <a class="list-group-item list-group-item-action bg-light dropdown-toggle" href="#" id="sidebardrop"
-                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="sidebardrop">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                <div class="btn-group">
+                    <a href="/users" class="list-group-item list-group-item-action bg-light">Kullanıcılar</a>
+                    <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    </button>
+                    <div class="dropdown-menu">
+                        <a href="/users/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
+                    </div>
+                </div>
+                <div class="btn-group">
+                    <a href="/library-settings" class="list-group-item list-group-item-action bg-light">Kütüphane Ayarları</a>
+                    <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    </button>
+                    <div class="dropdown-menu">
+                        <a href="/library-settings/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
+                    </div>
+                </div>
+                <div class="btn-group">
+                    <a href="/members" class="list-group-item list-group-item-action bg-light">Üyeler</a>
+                    <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    </button>
+                    <div class="dropdown-menu">
+                        <a href="/members/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
+                    </div>
+                </div>
+                <div class="btn-group">
+                    <a href="/borrowings" class="list-group-item list-group-item-action bg-light">Ödünç Kayıtları</a>
+                    <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    </button>
+                    <div class="dropdown-menu">
+                        <a href="/borrowings/create" class="list-group-item list-group-item-action bg-light">Ekle</a>
+                    </div>
+                </div>
+                <div class="btn-group">
+                    <a href="/writers" class="list-group-item list-group-item-action bg-light">Yazarlar</a>
+                    <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    </button>
+                    <div class="dropdown-menu">
+                        <a href="/writers/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
+                    </div>
+                </div>
+                <div class="btn-group">
+                    <a href="/publishers" class="list-group-item list-group-item-action bg-light">Yayıncı Firmalar</a>
+                    <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    </button>
+                    <div class="dropdown-menu">
+                        <a href="/publishers/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -47,7 +86,7 @@
         <div id="page-content-wrapper">
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-                <button class="btn btn-primary" id="menu-toggle">&lt;</button>
+                <button class="btn btn-primary" id="menu-toggle"><em class="fas fa-arrow-left"></em></button>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -57,22 +96,13 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="/writers" id="navbarDropdown"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                Dropdown
+                                <em class="fas fa-user"></em>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
+                                <a class="dropdown-item" href="/logout">Çıkış Yap</a>
                             </div>
                         </li>
                     </ul>
