Title changed, root url menu name changed

--- a/src/main/resources/templates/boilerplate.html
+++ b/src/main/resources/templates/boilerplate.html
@@ -13,7 +13,7 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="/css/sidebar.css">
-    <title>Kullanıcı Ekle</title>
+    <title>Kütüphane YBS</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <div class="bg-light border-right" id="sidebar-wrapper">
             <div class="sidebar-heading"><a href="/" class="navbar-brand">Kütüphane YBS</a></div>
             <div class="list-group list-group-flush">
-                <a href="/" class="list-group-item list-group-item-action bg-light">Dashboard</a>
+                <a href="/" class="list-group-item list-group-item-action bg-light">Özet</a>
                 <div class="btn-group">
                     <a href="/users" class="list-group-item list-group-item-action bg-light">Kullanıcılar</a>
                     <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
