Books endpoint added to sidebar menu

--- a/src/main/resources/templates/boilerplate.html
+++ b/src/main/resources/templates/boilerplate.html
@@ -61,6 +61,15 @@
                     </div>
                 </div>
                 <div class="btn-group">
+                    <a href="/books" class="list-group-item list-group-item-action bg-light">Kitaplar</a>
+                    <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    </button>
+                    <div class="dropdown-menu">
+                        <a href="/books/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
+                    </div>
+                </div>
+                <div class="btn-group">
                     <a href="/writers" class="list-group-item list-group-item-action bg-light">Yazarlar</a>
                     <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
