Security checks added to ensure authorized user can see

--- a/src/main/resources/templates/boilerplate.html
+++ b/src/main/resources/templates/boilerplate.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="tr" xmlns:th="http://www.thymeleaf.org">
+<html lang="tr" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="utf-8">
@@ -8,7 +8,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link href="https://unpkg.com/tabulator-tables@4.0.5/dist/css/tabulator.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
@@ -24,7 +23,7 @@
             <div class="sidebar-heading"><a href="/" class="navbar-brand">Kütüphane YBS</a></div>
             <div class="list-group list-group-flush">
                 <a href="/" class="list-group-item list-group-item-action bg-light">Özet</a>
-                <div class="btn-group">
+                <div sec:authorize="hasAuthority('ADMIN')" class="btn-group">
                     <a href="/users" class="list-group-item list-group-item-action bg-light">Kullanıcılar</a>
                     <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -33,8 +32,9 @@
                         <a href="/users/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
                     </div>
                 </div>
-                <div class="btn-group">
-                    <a href="/library-settings" class="list-group-item list-group-item-action bg-light">Kütüphane Ayarları</a>
+                <div sec:authorize="hasAuthority('ADMIN')" class="btn-group">
+                    <a href="/library-settings" class="list-group-item list-group-item-action bg-light">Kütüphane
+                        Ayarları</a>
                     <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     </button>
@@ -42,7 +42,7 @@
                         <a href="/library-settings/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
                     </div>
                 </div>
-                <div class="btn-group">
+                <div sec:authorize="hasAuthority('LIBRARIAN')" class="btn-group">
                     <a href="/members" class="list-group-item list-group-item-action bg-light">Üyeler</a>
                     <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -51,7 +51,7 @@
                         <a href="/members/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
                     </div>
                 </div>
-                <div class="btn-group">
+                <div sec:authorize="hasAuthority('LIBRARIAN')" class="btn-group">
                     <a href="/borrowings" class="list-group-item list-group-item-action bg-light">Ödünç Kayıtları</a>
                     <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -60,30 +60,33 @@
                         <a href="/borrowings/create" class="list-group-item list-group-item-action bg-light">Ekle</a>
                     </div>
                 </div>
-                <div class="btn-group">
+                <div sec:authorize="hasAnyAuthority('LIBRARIAN', 'EDITOR')" class="btn-group">
                     <a href="/books" class="list-group-item list-group-item-action bg-light">Kitaplar</a>
-                    <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button sec:authorize="hasAuthority('EDITOR')" type="button"
+                        class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                     </button>
-                    <div class="dropdown-menu">
+                    <div sec:authorize="hasAuthority('EDITOR')" class="dropdown-menu">
                         <a href="/books/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
                     </div>
                 </div>
-                <div class="btn-group">
+                <div sec:authorize="hasAnyAuthority('LIBRARIAN', 'EDITOR')" class="btn-group">
                     <a href="/writers" class="list-group-item list-group-item-action bg-light">Yazarlar</a>
-                    <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button sec:authorize="hasAuthority('EDITOR')" type="button"
+                        class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                     </button>
-                    <div class="dropdown-menu">
+                    <div sec:authorize="hasAuthority('EDITOR')" class="dropdown-menu">
                         <a href="/writers/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
                     </div>
                 </div>
-                <div class="btn-group">
+                <div sec:authorize="hasAnyAuthority('LIBRARIAN', 'EDITOR')" class="btn-group">
                     <a href="/publishers" class="list-group-item list-group-item-action bg-light">Yayıncı Firmalar</a>
-                    <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button sec:authorize="hasAuthority('EDITOR')" type="button"
+                        class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                     </button>
-                    <div class="dropdown-menu">
+                    <div sec:authorize="hasAuthority('EDITOR')" class="dropdown-menu">
                         <a href="/publishers/add" class="list-group-item list-group-item-action bg-light">Ekle</a>
                     </div>
                 </div>
@@ -95,22 +98,26 @@
         <div id="page-content-wrapper">
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-                <button class="btn btn-primary" id="menu-toggle"><em class="fas fa-arrow-left"></em></button>
+                <button class="btn btn-light" id="menu-toggle"><em class="fas fa-bars"></em></button>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                <button class="btn navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="fas fa-angle-down"></span>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="/writers" id="navbarDropdown"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="true">
                                 <em class="fas fa-user"></em>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                                <p class="dropdown-item"
+                                    th:text="${#authentication.getPrincipal().getUser().getName()} + ' ' + ${#authentication.getPrincipal().getUser().getSurname()}">
+                                </p>
+                                <hr>
                                 <a class="dropdown-item" href="/logout">Çıkış Yap</a>
                             </div>
                         </li>
